Fix unreadable button text after clicking 'em in Chrome.

--- a/style.less
+++ b/style.less
@@ -1093,7 +1093,7 @@ body.batch {
     border: .1em solid fade(@fg, 0%);
 
     .link-shadow();
-    &:hover {
+    &:hover, &:focus {
       .linkish-shadow(@fg);
     }
 
